--- a/bài tập 6.3/css2/2.css
+++ b/bài tập 6.3/css2/2.css
@@ -1,4 +1,5 @@
 *{
+	text-align: center;
 	box-sizing: border-box;
 }
 
@@ -11,7 +12,7 @@ body{
 h1{
 	text-align: center;
 	margin: 30px 0 10px 0;
-	color: Blue;
+	color: blue	;
 	font-size: 40px;
 }
 img{
@@ -20,13 +21,14 @@ img{
 }
 
 #main-menu a{
-	font-size: 20px;
-	color: red;
+	padding: 5px;
+	font-size: 35px;
+	color: #621;
 	text-decoration: none;
 }
 
 #main-menu a:hover, #main-menu a.active{
-	color: black;
+	color: blue;
 }
 
 #main-menu a,active{
