--- a/bài tập 6.4/css4/gallery.css
+++ b/bài tập 6.4/css4/gallery.css
@@ -1,4 +1,5 @@
 *{
+	display: block;
 	position: relative;
 	text-align: center;
 	box-sizing: border-box;
@@ -22,7 +23,7 @@ img{
 }
 #main-menu a{
 	padding: 5px;
-	font-size: 20px;
+	font-size: 30px;
 	color: #621;
 	text-decoration: none;
 }
