--- a/BT nhạc/css/style.css
+++ b/BT nhạc/css/style.css
@@ -147,7 +147,7 @@ body{
     padding: 5% 0 5% 0;
 }
 .bh2{
-    max-width: 100%;
+    width: 100%;
     padding: 5%;
 }
 .bh2 p{
@@ -173,7 +173,7 @@ body{
     padding: 160px  0 20px 20px ;
     width: 100%;
     height: 200px;
-    background-image: url(/img/slide1.jpg);
+    background-image: url(../img/slide1.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
     text-align: left;
