--- a/memory card 1/css/style.css
+++ b/memory card 1/css/style.css
@@ -3,15 +3,30 @@
     margin: 0px;
     box-sizing: border-box;
 }
-
-.labai1, .labai2, .labai3, .labai4, .labai5{
+.warp{
     position: relative;
+    margin: auto;
+    width: 1320px;
+    height: auto;
+}
+.content{
+    width: 70%;
+    margin: auto;
+    position: relative;
+
+}
+.gird{
     float: left;
     padding: 10px;
+    margin: auto;
+}
+.cards{
+    padding: 10px;
+    position: relative;
 }
 img{
-    width: 300px;
-    height: 400px;
+    width: 100px;
+    height: auto;
 }
 
 .sau{
@@ -21,16 +36,13 @@ img{
     top: 0;
     left: 0;
 }
-
-
-.labai1:hover .sau,.labai2:hover .sau, .labai3:hover .sau,.labai4:hover .sau, .labai5:hover .sau{
-    transform : rotateY(0deg);
-
+.cards:hover .sau{
+    transform: rotateY(0deg);
 }
-.labai1:hover .truoc,.labai2:hover .truoc, .labai3:hover .truoc,.labai4:hover .truoc, .labai5:hover .truoc{
+.cards:hover .truoc{
     transform: rotateY(180deg);
 }
-.labai1 .sau, .labai1 .truoc,.labai2 .sau, .labai2 .truoc,.labai3 .sau, .labai3 .truoc,.labai4 .sau, .labai4 .truoc,.labai5 .sau, .labai5 .truoc{
-    transition: all 0.5s;
+.sau, .truoc{
+    transition: all 2s;
     backface-visibility: hidden;
 }
